<resources>
    <string name="app_name">Story App</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="aleready_have_an_account">Aleready have an account ?</string>
    <string name="welcome_to_story_app">Welcome to Story App!</string>
    <string name="add_story_description">Add Story</string>
    <string name="welcome_image_description">welcome image</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error">Password must not be less than 8 characters</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="logout">Logout</string>
    <string name="desc">Share your stories in Bangkit here.</string>
    <string name="story_image_description">Story Image</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="result_empty">Result Empty</string>
    <string name="app_language">App language</string>
    <string name="language_icon">language icon</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_description">Please check your internet connection and try again.</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="location_denied">Permission denied</string>
    <string name="location">Location</string>
</resources>